2007-10-09  Lars Knoll  <lars@trolltech.com>

        Reviewed by Simon.

        expected result for this test. This differs from the Mac result, as I suspect their XMLHttpRequest implementation to have a bug here for local files. If a request is ok, the returned status code should be 200, not 0.

        * platform/qt/fast/dom/xmlhttprequest-get-expected.txt: Copied from LayoutTests/fast/dom/xmlhttprequest-get-expected.txt.

2007-10-09  Lars Knoll  <lars@trolltech.com>

        Reviewed by Simon.

        fix up the results for one test case, and remove 2 others from the skipped list.

        * platform/qt/Skipped:
        * platform/qt/fast/clip/014-expected.txt:

2007-10-09  Lars Knoll  <lars@trolltech.com>

        Reviewed by Simon.

        even though this is a text only test the result is platform dependent.

        * platform/qt/fast/css/computed-style-expected.txt: Copied from LayoutTests/fast/css/computed-style-expected.txt.

2007-10-08  Sam Weinig  <sam@webkit.org>

        Reviewed by Steve Falkenburg.

        Test for <rdar://problem/5519698> CrashTracer: [USER] 47 crashes in Safari at com.apple.WebCore: WebCore::XMLTokenizer::lineNumber const + 9

        * fast/innerHTML/innerHTML-script-tag-crash-expected.txt: Added.
        * fast/innerHTML/innerHTML-script-tag-crash.xhtml: Added.

2007-10-05  Lars Knoll  <lars@trolltech.com>

        Reviewed by olliej.

        fix a hang in editing/selection/extend-by-word-002.html

        * platform/qt/Skipped:

2007-10-05  Lars Knoll  <lars@trolltech.com>

        Add a dummy plugin to DRT  to fix fast/dom/Window/Plug-Ins.html.
        Add support for layoutTextController.setCanOpenWindows() to DRT
        fixing another 2 test cases in fast/dom/Window.

        Reviewed by Maciej.

        * platform/qt/Skipped:

2007-10-04  Sam Weinig  <sam@webkit.org>

        Rubber-stamped by Darin.

        Make traversal tests dumpAsText.

        * platform/mac/traversal: Removed.